--- a/style.css
+++ b/style.css
@@ -17,6 +17,25 @@ body {
     padding-right: 20px;
 
 }
+.btn-outline-success {
+
+    padding-left: 30px;
+    padding-right: 30px;
+    transition: .5s;
+}
+.btn-outline-success:hover {
+    background-color: #212529;
+    border: #212529;
+    box-shadow: 2.5px 4.33px 30px 0 rgba(64,87,191,0.1);
+    color: aqua;
+
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: #fff;
+}
+.navbar-dark .navbar-nav .nav-link:hover{
+    color: aqua;
+}
 
 .home-section {
     position: relative;
@@ -77,7 +96,7 @@ body {
 
 }
 .feature-section h6{
-    color: #2791B4;
+    color: aqua;
     font-size: 18px;
 
 }
@@ -168,6 +187,7 @@ body {
     margin-top: 30px;
     padding-right: 30px;
     padding-left: 30px;
+    transition: .2s;
     
 
 }
@@ -175,7 +195,7 @@ body {
 .service-section .text-section .button2:hover{
     background-color: #212529;
     border: #212529;
-    color: #fff;
+    color: aqua;
     letter-spacing: 5px;
 }
 
