--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
     padding-left: 30px;
     padding-right: 30px;
     transition: .5s;
+    border-color: 212529;
+    color: #212529;
 }
 .btn-outline-success:hover {
     background-color: #212529;
