--- a/style.css
+++ b/style.css
@@ -17,13 +17,15 @@ body {
     padding-right: 20px;
 
 }
+
 .btn-outline-success {
 
     padding-left: 30px;
     padding-right: 30px;
     transition: .5s;
-    border-color: 212529;
+    border-color: #212529;
     color: #212529;
+    background-color: #fff;
 }
 .btn-outline-success:hover {
     background-color: #212529;
